# osrs-tools

./: .gitignore  .pylintrc  README.md  Untitled-1.ipynb  example_data.csv  pyproject.toml  requirements.txt  setup.cfg  setup.py
cox-scaled/: estimate.py  muttadile.py  vespula.py
examples/: chinchompas_comparison.py  dinhs_max_hits.py  example_rope_aggro.py  example_scaled_solo_mystics.py  example_scaled_solo_sus_rooms.py  generic_comparison_examples.py  guardians_max_hits.py  melee_examples.py  ranged_examples.py  scaled_olm_seercull_comparison.py  scaled_olm_torva_inquisitor_comparison.py  scaled_rooms_and_olm_estimate.py  scaled_solo_olm.py  scaled_teams_olm.py
osrs-tools-v2/: boost_effects.py  cerberus.py  chinchompa_sandbox.py  competition_ehb.py  cox_tools.py  experience.py  full_check.py  general_tools.py  ice_demon_sandbox.py  magic_sandbox.py  main.py  mystics_sandbox.py  olm_sandbox.py  osrs_markov.py  resource_reader.py  run_energy_sandbox.py  shamans_sandbox.py  spells.py  tightrope sandbox.py  zuk.py
output/: olm max hits.csv
resources/: [2022-02-03] bitterkoekje_items.csv  bitterkoekje_items.tsv  bitterkoekje_items_bedevere_modified.csv  bitterkoekje_items_bedevere_modified.tsv  bitterkoekje_items_bedevere_modified_specials_sorted_filtered.csv  bitterkoekje_npcs.csv  bitterkoekje_npcs.tsv  cox_base_stats.tsv  gear_definition.txt  unittests ideas.txt
tests/: __init__.py  data.py  full_check.py  test_boosts.py  test_character.py  test_equipment.py  test_gear.py  test_prayer.py  test_sanguinesti_staff.py  test_special_weapon.py  test_stats.py  (+2 more)
(+169 files in other folders)
