[build-system]
requires = ["setuptools>57.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osrs-tools"
version = "2.0.0"

[tool.setuptools.packages.find]
where = ["src"]
namespace = false

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"